@@ -6,6 +6,7 @@ About
 This plugin replaces a (possibly zero-width) rectangular selection with
 integer numbers, using start/step/base etc. specified by the user.
 For practical reasons, the number of lines is limited to 100000.
+Lines shorter than the current selection are skipped.
 
 
 Requirements
@@ -50,4 +51,4 @@ program.
 
 Ideas, questions, patches and bug reports
 -----------------------------------------
-Dimitar Toshkov Zhekov <jimmy@is-vn.bg>
+Dimitar Zhekov <dimitar.zhekov@gmail.com>
